# yasa

./: .cproject  .dockerignore  .gitignore  .project  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  run_example.sh
integration-tests/: CMakeLists.txt  ClassifierTest.cc  SqliteDictionaryTest.cc  TrainerTest.cc
report/: report.md
src/: ArgumentParser.cc  ArgumentParser.h  CMakeLists.txt  Classifier.cc  Classifier.h  DbHandler.h  Dictionary.cc  Dictionary.h  FileReader.h  MainBehaviour.h  QueryResult.h  Sentiment.h  Sqlite3.cc  Sqlite3.h  SqliteDictionary.cc  SqliteDictionary.h  SqliteHandle.cc  SqliteHandle.h  SqliteHandler.cc  SqliteHandler.h  SqliteYasa.cc  SqliteYasa.h  TextFileReader.cc  TextFileReader.h  Trainer.cc  Trainer.h  Vocabulary.cc  Vocabulary.h  YasaDb.cc  YasaDb.h  classify.cc  classify.h  fileProcessing.cc  fileProcessing.h  main.cc  preprocessing.cc  preprocessing.h  train.cc  train.h  version.h
tests/: ArgumentParserTest.cc  CMakeLists.txt  ClassifierTest.cc  DictionaryTest.cc  MockDbHandler.h  MockDictionary.h  MockSqliteHandler.h  SentimentTest.cc  Sqlite3Test.cc  SqliteDictionaryTest.cc  SqliteHandleTest.cc  SqliteHandlerTest.cc  SqliteYasaTest.cc  TextFileReaderTest.cc  TrainerTest.cc  VocabularyTest.cc  YasaDbTest.cc  classifyTest.cc  fileProcessingTest.cc  preprocessingTest.cc  trainTest.cc
tests/resources/: fileWithoutWords.txt  negativeFileToClassify.txt  positiveFileToClassify.txt  test.txt
tests/resources/neg/: r1.txt  r2.txt
tests/resources/pos/: r1.txt  r2.txt
